--- a/index.html
+++ b/index.html
@@ -1005,6 +1005,15 @@
             <button type="button" id="repeatkibou3" onclick="selectkibou3(this)">13時</button>
             <button type="button" id="sankibou3" onclick="selectkibou3(this)">相談したい</button>
         </div>
+
+        <div class="label">プランをお選びください<span class="required">必須</span></div>
+        <div class="visit-buttons">
+            <button type="button" id="firstVisit" onclick="selectVisit(this)">ミニプラン 　37,000円+税</button>
+            <button type="button" id="repeatVisit" onclick="selectVisit(this)">スタンダードプラン 　50,000円+税</button>
+            <button type="button" id="sanVisit" onclick="selectVisit(this)">プレミアムプラン 　67,000円+税</button>
+            <button type="button" id="yonVisit" onclick="selectVisit(this)">赤ちゃんのいる暮らしプラン　37,000円+税</button>
+        </div>
+
         <div class="highlight-background">
             <div class="kibounitizi">お子様のお誕生日（任意）</span></div>
         </div>
