--- a/index.html
+++ b/index.html
@@ -1716,9 +1716,13 @@
                 phone: document.getElementById('phone').value.trim(),
                 birthweight: document.getElementById('birthweight').value.trim(),
                 mugwortmainkid: document.getElementById('mugwortmainkid').value.trim(),
+                mugwortmainkid2: document.getElementById('mugwortmainkid2').value.trim(),
+                mugwortmainkid3: document.getElementById('mugwortmainkid3').value.trim(), 
                 Yourresidentialaddress: document.getElementById('Yourresidentialaddress').value.trim(),
-                mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),
+                mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),              
                 mugwortparticipants: document.getElementById('mugwortparticipants').value.trim(),
+                mugwortparticipants2: document.getElementById('mugwortparticipants2').value.trim(),
+                mugwortparticipants3: document.getElementById('mugwortparticipants3').value.trim(),
                 mugwortshrinename: document.getElementById('mugwortshrinename').value.trim(),
                 visitCount, hairmakeupCount, kimonoCount, kimono2Count, kimono3Count, preparationphotoCount, FreshflowerphotographyCount, CaesareansectionCount, kibou1Count, kibou2Count, kibou3Count,
                 dates: [
