--- a/index.html
+++ b/index.html
@@ -1027,7 +1027,7 @@
         <input type="tel" id="mugwortparticipants2" placeholder="ご兄弟の年齢をご記入ください">
 
         <div class="info-text">【三人目】ご兄弟のお名前</div>
-        <input type="text" id="mugwortmainkid" placeholder="ご兄弟のお名前をご記入ください">
+        <input type="text" id="mugwortmainkid3" placeholder="ご兄弟のお名前をご記入ください">
         <div class="info-text">【三人目】ご兄弟の性別</div>
         <div class="kimono3-buttons">
             <button type="button" onclick="selectkimono3(this)">男の子</button>
@@ -1035,7 +1035,7 @@
             <button type="button" onclick="selectkimono3(this)">相談したい</button>
         </div>
         <div class="info-text">【三人目】ご兄弟の年齢</div>
-        <input type="tel" id="mugwortparticipants" placeholder="ご兄弟の年齢をご記入ください">
+        <input type="tel" id="mugwortparticipants3" placeholder="ご兄弟の年齢をご記入ください">
 
         <div class="labelnigyou">撮影に参加される方の<br>人数と続柄（任意）</div>
         <input type="text" id="mugwortshrinename" placeholder="撮影に参加される方の人数と続柄をご記入ください">
