--- a/index.html
+++ b/index.html
@@ -1388,6 +1388,36 @@
         }
 
         // 訪問回数の選択（初回・リピート）
+        function selectkimono2(element) {
+            document.querySelectorAll('.kimono2-buttons button').forEach(btn => btn.classList.remove('active'));
+            element.classList.add('active');
+            kimono2Count = element.innerText;
+
+            // 選択された訪問回数に対応する時間を取得
+            selectedkimono2Time = kimono2Times[kimono2Count];
+
+            console.log('選択された訪問回数の時間:', selectedkimono2Time);
+
+            // カレンダーを更新するために取得する日付を渡す
+            fetchAvailability(currentDate);
+        }
+
+        // 訪問回数の選択（初回・リピート）
+        function selectkimono3(element) {
+            document.querySelectorAll('.kimono3-buttons button').forEach(btn => btn.classList.remove('active'));
+            element.classList.add('active');
+            kimono3Count = element.innerText;
+
+            // 選択された訪問回数に対応する時間を取得
+            selectedkimono3Time = kimono3Times[kimono3Count];
+
+            console.log('選択された訪問回数の時間:', selectedkimono3Time);
+
+            // カレンダーを更新するために取得する日付を渡す
+            fetchAvailability(currentDate);
+        }
+
+        // 訪問回数の選択（初回・リピート）
         function selectpreparationphoto(element) {
             document.querySelectorAll('.preparationphoto-buttons button').forEach(btn => btn.classList.remove('active'));
             element.classList.add('active');
