--- a/index.html
+++ b/index.html
@@ -1528,6 +1528,12 @@
     Businessaddress: document.getElementById('Businessaddress').value.trim(),
     childsname: document.getElementById('childsname').value.trim(),
     Participateintheshooting: document.getElementById('Participateintheshooting').value.trim(),
+                mugwortparticipants: document.getElementById('mugwortparticipants').value.trim(),
+                mugwortparticipants2: document.getElementById('mugwortparticipants2').value.trim(),
+                mugwortparticipants3: document.getElementById('mugwortparticipants3').value.trim(),
+                mugwortmainkid: document.getElementById('mugwortmainkid').value.trim(),
+                mugwortmainkid2: document.getElementById('mugwortmainkid2').value.trim(),
+                mugwortmainkid3: document.getElementById('mugwortmainkid3').value.trim(), 
     Brothersname: document.getElementById('Brothersname').value.trim(), // ← 追加
     Siblingsage: document.getElementById('Siblingsage').value.trim(),   // ← 追加
     visitCount,
