--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
         .kimono-buttons,
         .kimono2-buttons,
         .kimono3-buttons,
+        .kimono4-buttons,
         .preparationphoto-buttons,
         .Freshflowerphotography-buttons,
         .highschool-buttons,
@@ -214,10 +215,10 @@
         .kimono-buttons button,
         .kimono2-buttons button,
         .kimono3-buttons button,
+        .kimono4-buttons button,
         .childsgender-buttons button,
         .Brothersgender-buttons button,
         .hairmakeup-buttons button,
-        .kimono-buttons button,
         .preparationphoto-buttons button,
         .Freshflowerphotography-buttons button,
         .highschool-buttons button,
@@ -242,10 +243,10 @@
         .kimono-buttons button.active,
         .kimono2-buttons button.active,
         .kimono3-buttons button.active,
+        .kimono4-buttons button.active,
         .childsgender-buttons button.active,
         .Brothersgender-buttons button.active,
         .hairmakeup-buttons button.active,
-        .kimono-buttons button.active,
         .preparationphoto-buttons button.active,
         .Freshflowerphotography-buttons button.active,
         .highschool-buttons button.active,
@@ -1586,7 +1587,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\n表札名\n・${formData.hyousatu}\n\nプラン\n・${formData.visitCount}\n\n撮影内容\n・${formData.FreshflowerphotographyCount}\n\nお子様のお誕生日\n・${formatDateOnly(formData.dates[3])}\n\n出張先住所\n・${formData.Businessaddress}\n\nお子様のお名前\n・${formData.childsname}\n\nお子様の性別\n・${formData.childsgenderCount}\n\n出生体重\n・${formData.birthweight}\n\n｟ご兄弟のお名前｠\n・${formData.mugwortmainkid}\n\n｟ご兄弟の性別｠\n・${formData.kimono4Count}\n\n｟ご兄弟の年齢｠\n・${formData.mugwortparticipants}\n\n｟二人目ご兄弟のお名前｠\n・${formData.mugwortmainkid2}\n\n｟二人目ご兄弟の性別｠\n・${formData.kimono2Count}\n\n｟二人目ご兄弟の年齢｠\n・${formData.mugwortparticipants2}\n\n｟三人目ご兄弟のお名前｠\n・${formData.mugwortmainkid3}\n\n｟三人目ご兄弟の性別｠\n・${formData.kimono3Count}\n\n｟三人目ご兄弟の年齢｠\n・${formData.mugwortparticipants3}\n\n撮影に参加\n・${formData.Participateintheshooting}\n\n生花撮影\n・${formData.kimonoCount}\n\nお支度\n・${formData.hairmakeupCount}\n\n【希望日時】\n｟第一希望日｠\n${formatDateWithTime(formData.dates[0])}\n｟希望時間1｠\n・${formData.kibou1Count}\n\n｟第二希望日｠\n${formatDateWithTime(formData.dates[1])}\n｟希望時間2｠\n・${formData.kibou2Count}\n\n｟第三希望日｠\n${formatDateWithTime(formData.dates[2])}\n｟希望時間3｠\n・${formData.kibou3Count}\n\n｟メッセージ｠\n${formData.message}`
+                text: `【予約フォーム】\nお名前\n・${formData.name}\n\n電話番号\n・${formData.phone}\n\n表札名\n・${formData.hyousatu}\n\nプラン\n・${formData.visitCount}\n\n撮影内容\n・${formData.FreshflowerphotographyCount}\n\nお子様のお誕生日\n・${formatDateOnly(formData.dates[3])}\n\n出張先住所\n・${formData.Businessaddress}\n\nお子様のお名前\n・${formData.childsname}\n\nお子様の性別\n・${formData.childsgenderCount}\n\n出生体重\n・${formData.birthweight}\n\n｟ご兄弟のお名前｠\n・${formData.mugwortmainkid}\n\n｟ご兄弟の性別｠\n・${formData.kimonoCount}\n\n｟ご兄弟の年齢｠\n・${formData.mugwortparticipants}\n\n｟二人目ご兄弟のお名前｠\n・${formData.mugwortmainkid2}\n\n｟二人目ご兄弟の性別｠\n・${formData.kimono2Count}\n\n｟二人目ご兄弟の年齢｠\n・${formData.mugwortparticipants2}\n\n｟三人目ご兄弟のお名前｠\n・${formData.mugwortmainkid3}\n\n｟三人目ご兄弟の性別｠\n・${formData.kimono3Count}\n\n｟三人目ご兄弟の年齢｠\n・${formData.mugwortparticipants3}\n\n撮影に参加\n・${formData.Participateintheshooting}\n\n生花撮影\n・${formData.kimono4Count}\n\nお支度\n・${formData.hairmakeupCount}\n\n【希望日時】\n｟第一希望日｠\n${formatDateWithTime(formData.dates[0])}\n｟希望時間1｠\n・${formData.kibou1Count}\n\n｟第二希望日｠\n${formatDateWithTime(formData.dates[1])}\n｟希望時間2｠\n・${formData.kibou2Count}\n\n｟第三希望日｠\n${formatDateWithTime(formData.dates[2])}\n｟希望時間3｠\n・${formData.kibou3Count}\n\n｟メッセージ｠\n${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
