--- a/index.html
+++ b/index.html
@@ -1737,12 +1737,20 @@
             });
         }
 
-        function formatDate(datetime) {
-            /* 日時文字列が空の場合は空文字を返す */
+        // 時間なし（出産予定日など）
+        function formatDateOnly(datetime) {
             if (!datetime) return '';
-            /* 日時文字列をDateオブジェクトに変換 */
             const date = new Date(datetime);
-            /* 年、月、日、時、分を取得しフォーマット */
+            const year = date.getFullYear();
+            const month = ('0' + (date.getMonth() + 1)).slice(-2);
+            const day = ('0' + date.getDate()).slice(-2);
+            return `${year}年${month}月${day}日`;
+        }
+
+        // 時間あり（希望日時など）
+        function formatDateWithTime(datetime) {
+            if (!datetime) return '';
+            const date = new Date(datetime);
             const year = date.getFullYear();
             const month = ('0' + (date.getMonth() + 1)).slice(-2);
             const day = ('0' + date.getDate()).slice(-2);
