--- a/index.html
+++ b/index.html
@@ -1694,7 +1694,7 @@
                 mugwortsiblinginfo: document.getElementById('mugwortsiblinginfo').value.trim(),
                 mugwortparticipants: document.getElementById('mugwortparticipants').value.trim(),
                 mugwortshrinename: document.getElementById('mugwortshrinename').value.trim(),
-                visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, CaesareansectionCount, childsgenderCount, kimonoCount, kimono2Count, kimono3Count,
+                visitCount, hairmakeupCount, kimonoCount, preparationphotoCount, FreshflowerphotographyCount, CaesareansectionCount, childsgenderCount, kibou1Count, kibou2Count, kibou3Count,
                 dates: [
                     document.getElementById('date1').value,
                     document.getElementById('date2').value,
