--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>予約フォーム</title>
+    <title>和装レンタル</title>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <style>
         /* 右端の細いナビ（固定） */
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #00b08d, #005e4b);
+            background: linear-gradient(135deg, #00b08d, #005241);
             color: white;
             padding: 20px;
             border-radius: 0 15px 0px 45px;
@@ -120,8 +120,6 @@
 
         .label {
             display: block;
-            margin-top: 3px;
-            /* ← 追加 */
             margin-bottom: 10px;
             padding: 3px;
             font-weight: 600;
@@ -130,7 +128,9 @@
             border-radius: 6px;
             font-size: 18px;
             text-align: center;
+            /* 中央揃え */
             text-indent: 40px;
+            /* テキストを右に20pxずらす */
             position: relative;
             overflow: hidden;
         }
@@ -186,12 +186,10 @@
         }
 
         .visit-buttons,
-        .kibou1-buttons,
-        .kibou2-buttons,
-        .kibou3-buttons,
         .highschool-buttons,
         .symptoms,
         .menu-sections,
+        .Freshflowerphotography-buttons,
         .irradiations {
             display: flex;
             flex-wrap: wrap;
@@ -200,11 +198,10 @@
         }
 
         .visit-buttons button,
+        .highschool-buttons button,
         .symptoms button,
-        .kibou1-buttons button,
-        .kibou2-buttons button,
-        .kibou3-buttons button,
         .menu-sections button,
+        .Freshflowerphotography-buttons button,
         .irradiations button {
             flex: 1;
             padding: 10px;
@@ -218,9 +215,9 @@
         }
 
         .visit-buttons button.active,
-        .kibou1-buttons button.active,
-        .kibou2-buttons button.active,
-        .kibou3-buttons button.active,
+        .highschool-buttons button.active,
+        .symptoms button.active,
+        .Freshflowerphotography-buttons button.active,
         .menu-sections button.active,
         .irradiations button.active {
             background-color: #444;
@@ -496,63 +493,6 @@
             }
         }
 
-        .info-text {
-            margin-top: 20px;
-            /* 上の余白 */
-            margin-bottom: 10px;
-            /* 下に白い隙間を追加 */
-            font-size: 13px;
-            color: #000000;
-            line-height: 1.5;
-            text-align: center;
-            word-wrap: break-word;
-            background-color: #eef9f5;
-            /* 青っぽい背景色を追加 */
-            padding: 10px;
-            border-radius: 4px;
-        }
-
-        /* 携帯端末向けのレスポンシブデザイン */
-        @media (max-width: 768px) {
-            .info-text {
-                font-size: 11.5px;
-                /* スマホでは少し小さく */
-                margin-top: 10px;
-                /* 上下のマージンを調整 */
-                line-height: 2.0;
-                /* テキストの高さ調整 */
-            }
-        }
-
-        .info-textmemo {
-            margin-top: 20px;
-            margin-bottom: 10px;
-            font-size: 13px;
-            color: #000000;
-            line-height: 1.5;
-            text-align: center;
-            word-wrap: break-word;
-            background-color: #eef9f5;
-            padding: 10px;
-            border-radius: 4px;
-
-            /* 横一杯に広げるための追加 */
-            width: 100%;
-            box-sizing: border-box;
-            /* padding含めて100%に収まるように */
-            display: block;
-        }
-
-        /* 携帯端末向けのレスポンシブデザイン */
-        @media (max-width: 768px) {
-            .info-textmemo {
-                font-size: 11.5px;
-                margin-top: 10px;
-                line-height: 2.0;
-            }
-        }
-
-
         .symptoms,
         .options {
             display: block;
@@ -670,11 +610,11 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #00b08d;
+            background-color: #dc3545;
         }
 
         .submit-button:hover {
-            background-color: #00b08d;
+            background-color: #c82333;
         }
 
         @media (max-width: 768px) {
@@ -837,35 +777,6 @@
             /* はみ出た中身を隠す（枠から出ないようにする） */
         }
 
-        .kibounitizinini {
-            display: block;
-            /* ブロック要素として表示。幅いっぱいに広がるよ！ */
-            margin-bottom: 1px;
-            /* 下に10pxのスペースをあける（余白） */
-            padding: 3px;
-            /* 内側に3pxのスペースをつける（中身がくっつかないように） */
-            font-weight: 600;
-            /* 文字を少し太くする（600は太さの目安） */
-            background-color: #00b08d;
-            /* 背景の色をくすんだ緑にする */
-            color: white;
-            /* 文字の色を白にする */
-            border-radius: 6px;
-            /* 角を6pxだけ丸くする（ふんわりした見た目に） */
-            font-size: 20px;
-            /* 文字の大きさを18pxにする（ちょっと大きめ） */
-            text-align: center;
-            /* 文字を中央に揃える */
-            /* ↑ 中央揃えにしています */
-            text-indent: 40px;
-            /* 最初の行だけ、文字を右に20pxずらす */
-            /* ↑ テキストの先頭をちょっと右にずらしてるよ！ */
-            position: relative;
-            /* 子要素を自由に配置できるようにする準備（位置調整） */
-            overflow: hidden;
-            /* はみ出た中身を隠す（枠から出ないようにする） */
-        }
-
         .info-row {
             display: flex;
             justify-content: space-between;
@@ -897,30 +808,41 @@
             background-color: #ff4f4f;
         }
 
-        /* time入力欄 */
-        #mugwortreservationtime {
-            width: 100%;
-            /* スマホ画面いっぱいに広げる */
-            padding: 1em;
-            /* タップしやすく内側余白を増やす */
-            font-size: 1rem;
-            /* 入力しやすい文字サイズ */
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            background-color: #fff;
-            box-sizing: border-box;
-            appearance: none;
-            /* iOS Safariで余計なスタイルを消す */
-            -webkit-appearance: none;
-            transition: border-color 0.3s;
-        }
+  .label {
+    font-weight: bold;
+    font-size: 16px;
+    margin-bottom: 12px;
+  }
 
-        /* フォーカス時の装飾 */
-        #mugwortreservationtime:focus {
-            border-color: #00a683;
-            outline: none;
-            background-color: #f9fefc;
-        }
+  .checkbox-group {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .checkbox-card {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 12px 16px;
+    background-color: #f9f9f9;
+    border: 1.5px solid #ddd;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    font-size: 15px;
+  }
+
+  .checkbox-card:hover {
+    background-color: #eef9f5;
+    border-color: #66cdaa;
+  }
+
+  .checkbox-card input[type="checkbox"] {
+    accent-color: #66cdaa;
+    width: 18px;
+    height: 18px;
+  }
     </style>
 </head>
 
@@ -934,7 +856,7 @@
     </div>
 
     <div class="container">
-        <h1>すずき写真事務所<br>出張撮影/その他の撮影
+        <h1>予約フォームのみ<br>和装レンタル
         </h1>
         <div class="label">お客様名<span class="required">必須</span></div>
         <input type="text" id="name" placeholder="お名前を入力してください" oninput="saveInput('name')">
@@ -951,84 +873,75 @@
 
         <!-- カスタム placeholder 表示用 -->
         <div class="datetime-wrapper" style="text-align: center;">
-            <span class="placeholder" id="placeholder1">⇩タップして日付を入力⇩</span>
-            <input type="date" id="date1" class="datetime-input" placeholder=" " aria-label="タップして日付を入力">
-        </div>
-
-        <div class="label">希望時間<span class="required">必須</span></div>
-        <div class="kibou1-buttons">
-            <button type="button" id="firstkibou1" onclick="selectkibou1(this)">10時</button>
-            <button type="button" id="repeatkibou1" onclick="selectkibou1(this)">13時</button>
-            <button type="button" id="sankibou1" onclick="selectkibou1(this)">相談したい</button>
+            <span class="placeholder" id="placeholder1">⇩タップして日時を入力⇩</span>
+            <input type="datetime-local" id="date1" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
         </div>
 
         <div class="highlight-background">
-            <span class="kibounitizi">第2希望日<span class="required">必須</span></span>
+            <span class="kibounitizi">第2希望日（任意）</span>
         </div>
 
         <!-- カスタム placeholder 表示用 -->
         <div class="datetime-wrapper" style="text-align: center;">
             <span class="placeholder" id="placeholder2">⇩タップして日時を入力⇩</span>
-            <input type="date" id="date2" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
-        </div>
-
-        <div class="label">希望時間<span class="required">必須</span></div>
-        <div class="kibou2-buttons">
-            <button type="button" id="firstkibou2" onclick="selectkibou2(this)">10時</button>
-            <button type="button" id="repeatkibou2" onclick="selectkibou2(this)">13時</button>
-            <button type="button" id="sankibou2" onclick="selectkibou2(this)">相談したい</button>
+            <input type="datetime-local" id="date2" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
         </div>
 
         <div class="highlight-background">
-            <span class="kibounitizi">第3希望日※任意</span>
+            <span class="kibounitizi">第3希望日（任意）</span>
         </div>
 
         <!-- カスタム placeholder 表示用 -->
         <div class="datetime-wrapper" style="text-align: center;">
             <span class="placeholder" id="placeholder3">⇩タップして日時を入力⇩</span>
-            <input type="date" id="date3" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
+            <input type="datetime-local" id="date3" class="datetime-input" placeholder=" " aria-label="タップして日時を入力">
         </div>
 
-        <div class="label">希望時間<span class="required">必須</span></div>
-        <div class="kibou3-buttons">
-            <button type="button" id="firstkibou3" onclick="selectkibou3(this)">10時</button>
-            <button type="button" id="repeatkibou3" onclick="selectkibou3(this)">13時</button>
-            <button type="button" id="sankibou3" onclick="selectkibou3(this)">相談したい</button>
-        </div>
+<div class="label">お子様の性別<span class="required">必須</span></div>
+<div class="checkbox-group">
+  <label class="checkbox-card">
+    <input type="checkbox" name="freshflowerphotography" value="七五三3歳">
+    <span>七五三3歳</span>
+  </label>
+  <label class="checkbox-card">
+    <input type="checkbox" name="freshflowerphotography" value="七五三5歳">
+    <span>七五三5歳</span>
+  </label>
+  <label class="checkbox-card">
+    <input type="checkbox" name="freshflowerphotography" value="七五三7歳">
+    <span>七五三7歳</span>
+  </label>
+  <label class="checkbox-card">
+    <input type="checkbox" name="freshflowerphotography" value="ママお着物">
+    <span>ママお着物</span>
+  </label>
+  <label class="checkbox-card">
+    <input type="checkbox" name="freshflowerphotography" value="パパお着物">
+    <span>パパお着物</span>
+  </label>
+  <label class="checkbox-card">
+    <input type="checkbox" name="freshflowerphotography" value="お宮参り産着">
+    <span>お宮参り産着</span>
+  </label>
+  <label class="checkbox-card">
+    <input type="checkbox" name="freshflowerphotography" value="その他">
+    <span>その他</span>
+  </label>
+</div>
 
-        <div class="label">プランをお選びください<span class="required">必須</span></div>
-        <div class="visit-buttons">
-            <button type="button" id="firstVisit" onclick="selectVisit(this)">ロケーション撮影プラン 40,000円+税</button>
-            <button type="button" id="repeatVisit" onclick="selectVisit(this)">日々のくらしプラン 37,000円+税</button>
-            <button type="button" id="sanVisit" onclick="selectVisit(this)">その他の撮影</button>
-        </div>
-
-        <div class="label">撮影内容<span class="required">必須</span></div>
-        <textarea id="Businessaddress" placeholder="撮影内容をご記入ください。"></textarea>
-
-        <div class="labelContent">メッセージ<br>（質問等お気軽にご記入ください）</div>
+        <div class="labelContent">ご質問/ご相談<br>（質問等お気軽にご記入ください）</div>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
-        <button class="submit-button" onclick="submitForm()" div id="section-message">予約を行う</button>
+        <div class="info-text">※送信ボタンを押すと、料金やカタログ等の詳しいご案内が自動返信されます。</div>
+        <button class="submit-button" onclick="submitForm()" div id="section-message">送信</button>
     </div>
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script>
     <script>
-        let visitCount = '';
-        let hairmakeupCount = '';
-        let kibou1Count = '';
-        let kibou2Count = '';
-        let kibou3Count = '';
-        let kimonoCount = '';
-        let preparationphotoCount = '';
-        let BrothersgenderCount = '';
-        let childsgenderCount = '';
-        let FreshflowerphotographyCount = '';
-        let selectedMenu = '';
-        let highschoolCount = '';
         let selectedSymptom = [];  // 配列として定義
         let selectedFullDate = '';
         let currentDate = new Date();
+        let FreshflowerphotographyCount = [];
         let availabilityCache = {};
         let irradiationsCount = ''; <!-- 選択された症状を格納する変数 -->
         let totalAmount = 0; // 合計金額を格納する変数
@@ -1103,65 +1016,38 @@
             }
         }
 
-        // 訪問回数の選択（初回・リピート）
-        function selectVisit(element) {
-            document.querySelectorAll('.visit-buttons button').forEach(btn => btn.classList.remove('active'));
-            element.classList.add('active');
-            visitCount = element.innerText;
+        // 日付セルのクリックイベントで希望日時を更新
+        document.querySelectorAll('.calendar td').forEach(cell => {
+            cell.addEventListener('click', () => {
+                selectDate(cell);
+                updateDisplayInfo();  // 日付を選択したら即座に表示を更新
+            });
+        });
 
-            // 選択された訪問回数に対応する時間を取得
-            selectedVisitTime = visitTimes[visitCount];
-
-            console.log('選択された訪問回数の時間:', selectedVisitTime);
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
+        function updateTotalAmount() {
+            totalAmount = menuPrice + optionsPrice; // オプションの価格も含める
+            updateDisplayInfo(); // 表示を更新
         }
 
-        // 訪問回数の選択（初回・リピート）
-        function selectkibou1(element) {
-            document.querySelectorAll('.kibou1-buttons button').forEach(btn => btn.classList.remove('active'));
-            element.classList.add('active');
-            kibou1Count = element.innerText;
+  function fetchSelectedFreshflowerphotography() {
+    const checkboxes = document.querySelectorAll('input[name="freshflowerphotography"]:checked');
+    const selected = [];
+    let totalTime = 0;
 
-            // 選択された訪問回数に対応する時間を取得
-            selectedkibou1Time = kibou1Times[kibou1Count];
+    checkboxes.forEach(cb => {
+      selected.push(cb.value);
+      totalTime += FreshflowerphotographyTimes[cb.value] || 0;
+    });
 
-            console.log('選択された訪問回数の時間:', selectedkibou1Time);
+    console.log("選択された項目:", selected);
+    console.log("合計時間:", totalTime);
 
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
+    fetchAvailability(currentDate); // カレンダー更新処理
+  }
 
-        // 訪問回数の選択（初回・リピート）
-        function selectkibou2(element) {
-            document.querySelectorAll('.kibou2-buttons button').forEach(btn => btn.classList.remove('active'));
-            element.classList.add('active');
-            kibou2Count = element.innerText;
-
-            // 選択された訪問回数に対応する時間を取得
-            selectedkibou2Time = kibou2Times[kibou2Count];
-
-            console.log('選択された訪問回数の時間:', selectedkibou2Time);
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
-
-        // 訪問回数の選択（初回・リピート）
-        function selectkibou3(element) {
-            document.querySelectorAll('.kibou3-buttons button').forEach(btn => btn.classList.remove('active'));
-            element.classList.add('active');
-            kibou3Count = element.innerText;
-
-            // 選択された訪問回数に対応する時間を取得
-            selectedkibou3Time = kibou3Times[kibou1Count];
-
-            console.log('選択された訪問回数の時間:', selectedkibou3Time);
-
-            // カレンダーを更新するために取得する日付を渡す
-            fetchAvailability(currentDate);
-        }
+  document.querySelectorAll('input[name="freshflowerphotography"]').forEach(cb => {
+    cb.addEventListener('change', fetchSelectedFreshflowerphotography);
+  });
 
         function selectDate(cell) {
             // "unavailable" クラスが付いている場合はクリックを無効化
@@ -1192,9 +1078,8 @@
             const formData = {
                 name: document.getElementById('name').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
-                Yourresidentialaddress: document.getElementById('Yourresidentialaddress').value.trim(),
-                Businessaddress: document.getElementById('Businessaddress').value.trim(),
-                visitCount, kibou1Count, kibou2Count, kibou3Count,
+        Yourresidentialaddress: document.getElementById('Yourresidentialaddress').value.trim(),
+        FreshflowerphotographyCount,
                 dates: [
                     document.getElementById('date1').value,
                     document.getElementById('date2').value,
@@ -1205,7 +1090,7 @@
 
             // フォームデータのチェック
             if (!formData.name) {
-                alert('お名前を入力してください');
+                alert('お名前を入力してください。');
                 return;
             }
 
@@ -1215,17 +1100,7 @@
             }
 
             if (!formData.phone) {
-                alert('電話番号を入力してください');
-                return;
-            }
-
-            if (!formData.visitCount) {
-                alert('プランをお選びください');
-                return;
-            }
-
-            if (!formData.Businessaddress) {
-                alert('撮影内容を入力してください');
+                alert('電話番号を入力してください。');
                 return;
             }
 
@@ -1237,7 +1112,7 @@
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n≪出張撮影/その他の撮影≫\n\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n｟プラン｠\n・${formData.visitCount}\n\n｟撮影内容｠\n・${formData.Businessaddress}\n\n【希望日時】\n｟第一希望日｠\n${formatDateWithTime(formData.dates[0])}\n｟希望時間1｠\n・${formData.kibou1Count}\n\n｟第二希望日｠\n${formatDateWithTime(formData.dates[1])}\n｟希望時間2｠\n・${formData.kibou2Count}\n\n｟第三希望日｠\n${formatDateWithTime(formData.dates[2])}\n｟希望時間3｠\n・${formData.kibou3Count}\n\n｟メッセージ｠\n${formData.message}`
+                text: `【予約フォーム】\n≪衣装レンタル≫\n｟お名前｠\n・${formData.name}\n\n｟ご住所｠\n・${formData.Yourresidentialaddress}\n\n｟電話番号｠\n・${formData.phone}\n\n｟メニュー｠\n・衣装レンタル\n\n｟お子様の性別｠\n・${formData.FreshflowerphotographyCount}\n\n【希望日時】\n｟第一希望日｠\n${formatDate(formData.dates[0])}\n\n｟第二希望日｠\n${formatDate(formData.dates[1])}\n\n｟第三希望日｠\n${formatDate(formData.dates[2])}\n\n｟メッセージ｠\n・${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
